src/objects/PS_Util__c.object
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <customSettingsVisibility>Public</customSettingsVisibility>
    <fields>
        <fullName>ObjectName__c</fullName>
        <label>ObjectName</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Object_Fields1__c</fullName>
        <label>Object Fields1</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Object_Fields__c</fullName>
        <label>Object Fields</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Where_Clause__c</fullName>
        <label>Where Clause</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <label>PS_Util</label>
</CustomObject>